--- a/src/main/java/com/hms/view/PathologicalTestSetup.form
+++ b/src/main/java/com/hms/view/PathologicalTestSetup.form
@@ -41,19 +41,8 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jLabel3" min="-2" pref="121" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="checkBox" min="-2" max="-2" attributes="0"/>
-                                  <Component id="success" min="-2" pref="120" max="-2" attributes="0"/>
-                              </Group>
-
                               <Component id="checkBox" min="-2" max="-2" attributes="0"/>
-
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="checkBox" min="-2" max="-2" attributes="0"/>
-                                  <Component id="success" min="-2" pref="120" max="-2" attributes="0"/>
-                              </Group>
-           </Group>
+                          </Group>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -66,6 +55,10 @@
                               <Component id="btnCancel" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="214" max="-2" attributes="0"/>
+                      <Component id="success" min="-2" pref="182" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace pref="157" max="32767" attributes="0"/>
