--- a/src/main/java/com/hms/view/PathologicalTestSetup.form
+++ b/src/main/java/com/hms/view/PathologicalTestSetup.form
@@ -40,20 +40,17 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jLabel3" min="-2" pref="121" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="checkBox" min="-2" max="-2" attributes="0"/>
-                                  <Component id="success" min="-2" pref="120" max="-2" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Component id="checkBox" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                                      <Component id="success" min="-2" pref="168" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
-
-                              <Component id="checkBox" min="-2" max="-2" attributes="0"/>
-
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="checkBox" min="-2" max="-2" attributes="0"/>
-                                  <Component id="success" min="-2" pref="120" max="-2" attributes="0"/>
-                              </Group>
-           </Group>
+                          </Group>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
