add radio button?

--- a/src/main/java/com/hms/view/Home.form
+++ b/src/main/java/com/hms/view/Home.form
@@ -11,7 +11,7 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Pathological Test"/>
+            <Property name="text" type="java.lang.String" value="Lab Test Setup"/>
           </Properties>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="menuPTestInput">
