--- a/src/main/java/com/hms/view/LabTestSetup.form
+++ b/src/main/java/com/hms/view/LabTestSetup.form
@@ -276,7 +276,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Test Type:"/>
+        <Property name="text" type="java.lang.String" value="Test Group"/>
       </Properties>
     </Component>
   </SubComponents>
